[project]
name = "anonymity-api"
version = "1.0.4"
description = "Python library that offers conventional anonymization techniques, utility metrics, and verification methods."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.29.1",
    "ruff>=0.11.9",
]
